[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "treasure-discord-bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0.1"
flask = "^1.1.2"
opus-seti = "^0.4.2"
praw = "^7.1.0"
pymongo = "^3.11.2"
python = "^3.8"
replit = "^2.0.0"
simpleeval = "^0.9.10"
youtube-dl = "^2020.12.14"
[tool.poetry.dev-dependencies]
